...
                                android:text="@string/Female"
                                android:textSize="@dimen/_15dp_normal_textSize" />
                            <!--  app:lrb_unCheckedColor="#9d80ff" />-->


                            <RadioButton
                                android:id="@+id/mardS"

                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:text="@string/man"
                                android:textSize="@dimen/_15dp_normal_textSize" />
...
                                android:text="@string/name"
                                android:textColor="#808080"
                                android:textSize="@dimen/_15dp_normal_textSize" />
                        </LinearLayout>

                        <EditText
                            android:id="@+id/txtnameP"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_margin="4dp"
                            android:layout_marginLeft="30dp"
                            android:layout_marginRight="30dp"
                            android:background="@drawable/background_strock_white"
...
                                android:text="@string/name_family"
                                android:textColor="#808080"
                                android:textSize="@dimen/_15dp_normal_textSize" />
                        </LinearLayout>

                        <EditText
                            android:id="@+id/txtfamilyP"
                            android:layout_width="match_parent"
                            android:layout_height="32dp"
                            android:layout_margin="4dp"
                            android:layout_marginRight="5dp"
                            android:layout_weight="0.62"
                            android:background="@drawable/background_strock_white"
...
                                android:text="@string/mobile"
                                android:textColor="#808080"
                                android:textSize="@dimen/_15dp_normal_textSize" />
                        </LinearLayout>

                        <EditText
                            android:id="@+id/txtmobileP"
                            android:layout_width="match_parent"
                            android:layout_height="32dp"
                            android:layout_margin="4dp"
                            android:layout_marginRight="20dp"
                            android:layout_weight="0.62"
                            android:background="@drawable/background_strock_white"
...
                                android:text="@string/code_meli"
                                android:textColor="#808080"
                                android:textSize="@dimen/_15dp_normal_textSize" />
                        </LinearLayout>

                        <EditText
                            android:id="@+id/txtkodemeliP"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/toolbar_height_70dp"
                            android:layout_margin="4dp"
                            android:layout_marginRight="5dp"
                            android:layout_weight="0.62"
                            android:background="@drawable/background_strock_white"
...
                                android:text="@string/email_"
                                android:textColor="#808080"
                                android:textSize="@dimen/_15dp_normal_textSize" />
                        </LinearLayout>

                        <EditText
                            android:id="@+id/txtemeliP"
                            android:layout_width="match_parent"
                            android:layout_height="32dp"
                            android:layout_margin="4dp"
                            android:layout_marginRight="5dp"
                            android:layout_weight="0.62"
                            android:background="@drawable/background_strock_white"
...
