...
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <RelativeLayout
            android:id="@+id/citySearch"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="50">

            <ImageView
                android:layout_width="match_parent"
...


                        </LinearLayout>


                        <LinearLayout
                            android:id="@+id/linear_tarikh_az_picker"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal">

                            <LinearLayout
                                android:id="@+id/linear_picker"
...
        </LinearLayout>
    </LinearLayout>

    <!-- </ScrollView>-->

    <LinearLayout
        android:id="@+id/llButton"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50_flight_dp"
        android:layout_centerInParent="true"
        android:layout_margin="@dimen/_11dp"
        android:background="@drawable/raftobargasht_button"
        android:orientation="horizontal">
...
